# inkscape-shortcutter

./: Cargo.toml  README.md
src/: .main.rs.swp  .utils.rs.swp  config.rs  main.rs  utils.rs  vim.rs
