[package]
name = "inkscape-shortcuter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clipboard = "0.5.0"
anyhow = "1.0.68"
xkbcommon = { version = "0.5", features = ["x11"] }
x11rb = { version = "0.11", features = ["allow-unsafe-code", "xkb"] }
xcb = "1.1"
