[package]
name = "inkscape-shortcuter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
xkbcommon = { version = "0.7", features = ["x11"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xkb"] }
xcb = {version = "1.3.0", features = ["as-raw-xcb-connection"] }
anyhow = "1.0.77"
as-raw-xcb-connection = "1.0.1"
